Fix 2d6 Math and cell alignment

--- a/2d6-Math.css
+++ b/2d6-Math.css
@@ -44,7 +44,7 @@ th {
     font-weight: normal;
 }
 td {
-    padding-right: 1em;
+    padding: 0 1ex;
 }
 .highlight {
     background-color: #ddd;
